# fuchuang_five-dev

./: .editorconfig  .env  .gitattributes  .gitignore  Dockerfile  README.md  database.py  main.py  requirements.txt  test.http
ai_core/: .gitignore  Any2table.md  README.md  pyproject.toml
ai_core/.claude/skills/any2table-candidate-selection/: SKILL.md  examples.md
ai_core/.claude/skills/any2table-paragraph-structuring/: SKILL.md
ai_core/.claude/skills/any2table-task-understanding/: SKILL.md  examples.md
ai_core/.claude/skills/any2table-verification/: SKILL.md  examples.md
ai_core/engine/: __init__.py  engine.py  requirements.txt  schemas.py
ai_core/src/any2table/: __init__.py  agents.py  analyzers.py  app.py  cli.py  compute.py  config.py  extractors.py  parsers.py  planners.py  rag.py  registry.py  retrievers.py  verifiers.py  writers.py
ai_core/src/any2table/candidates/: __init__.py  builders.py  models.py
ai_core/src/any2table/core/: models.py  orchestrator.py  protocols.py  runtime.py
ai_core/src/any2table/indexing/: __init__.py  build_units.py
ai_core/src/any2table/llm/: __init__.py  client.py  models.py
ai_core/src/any2table/merging/: __init__.py  merger.py
ai_core/src/any2table/skills/: __init__.py  adapters.py  executor.py  loader.py  models.py  (+2 more)
ai_core/src/docnexus_ai/: __init__.py  document_operations.py  information_extraction.py  llm.py  table_filling.py
ai_core/tests/: test_candidate_merger.py  test_compute_verifier.py  test_docnexus_ai_modules.py  test_engine.py  test_hybrid_rag.py  test_knowledge_graph.py  test_row_resolution.py
(+42 files in other folders)
